# Galaksija-Emulator

./: .gitmodules  CMakeLists.txt  README.md
inc/Z80/: Debug.c  Makefile  Z80.h  dasm.c
inc/tinyfiledialogs/: tinyfiledialogs.c
src/: core.c  dos.h  error.h  galaxy.h  graphics.c  graphics.h  init.c  main.c  sdl2_main.c  sdl2_main.h  shared.c  shared.h  system.h  z80.c  z80.h
src/util/: endianess.h  file.c  file.h
